# ezcomputerctrl-mcp

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
docs/: hidden-keepalive-design.md
scripts/: ezcomputerctrl.env.example.ps1  run_ezcomputerctrl_http.ps1  start_ezcomputerctrl_hidden.vbs  stop_ezcomputerctrl.ps1
skills/install-ezcomputerctrl-mcp/: SKILL.md
src/ezcomputerctrl/: __init__.py  __main__.py  capture.py  config.py  controller.py  dispatch.py  executor.py  mcp_server.py  models.py  perception.py  protocol.py  semantic.py  state_store.py  watcher.py
