[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ezcomputerctrl"
version = "0.1.0"
description = "一个面向 Windows 桌面 GUI 控制、视觉优先的 MCP，让智能体能够操作语义对象，而不是脆弱的屏幕坐标"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.19.0",
    "openai>=1.75.0",
    "pillow>=11.2.0",
    "pydantic>=2.12.0",
    "watchdog>=6.0.0",
]

[project.scripts]
ezcomputerctrl-mcp = "ezcomputerctrl.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
